kubernetes/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    pod-security.kubernetes.io/enforce: restricted
    kustomize.toolkit.fluxcd.io/prune: disabled
