kubernetes/app/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - env:
            - name: NEXT_PUBLIC_API_URL
              value: http://backend.app.svc.cluster.local:8080
          image: us-west1-docker.pkg.dev/kubernetes-cluster-458203/project-store/frontend:1.0.26
          name: project-store-frontend
          ports:
            - containerPort: 3000
              protocol: TCP
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: false
            privileged: false
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
      imagePullSecrets:
        - name: gcp-artifact-registry
      restartPolicy: Always
